to Subversion revision numbers (rXXXXX). To open the tracker item, go to URL:
http://winmerge.org/tracker/[tracker-id]

WinMerge 2.13.4
  Put temp files to per-instance subfolder in temp folder (#2582768)
  Bugfix: Files without extension get backed up to name..bak (#2627752)
  Bugfix: Crash opening config log (#2630027)
  Translation updates:
  - Galician (#2632173)
  - Greek (#2615285)

WinMerge 2.13.3 - 2009-02-17 (r6479)
  Use three-digit version numbers in GUI (#2585662)
  Detect Windows 7 and Windows 2008 in config log (#2599256)
  Show only "Copy to other side" item in file compare
    context menu (#2600787)
  Bugfix: Could not copy files from right to left (#2556904)
  Bugfix: Don't show file name extension for folders (#2563314)
  Bugfix: Help window opened from WinMerge was modal (#2590079)
  Bugfix: Crash in editor when undoing (#2590212)
  Bugfix: Browse button in Option dialog reverted to previous settings
    (#2606153)  
  Translation updates:
  - Chinese Traditional (#2608190)
  - Croatian (#2596949)
  - Dutch (#2590430)
  - French (#2551043, #2551066, #2603591)
  - German (#2586497)
  - Greek (#2550911)
  - Japanese (r6461)
  - Swedish (#2557881)
  - Ukrainian (#2609242)

WinMerge 2.13.2 - 2009-01-28 (r6395)
  Register.bat should use Find with full path (#2536582)
  Bugfix: Creating new files caused message about missing files (#2515875)
  Bugfix: Could not hide folders in recursive compare (#2528749)
  Bugfix: Folder Compare:Copy Right/Left don't create folder
    structure (#2529517)
  Bugfix: Must Show Different to Show L/R Unique (#2129561)
  Translation updates:
  - Brazilian (#2524796)
  - Chinese Traditional (#2540115)
  - Dutch (#2531307)
  - Swedish (#2511043)

WinMerge 2.13.1 - 2009-01-15 (r6334)
  Update Python syntax highlight keywords for Python 2.6 (#2473375)
  More accurate visible area indicator in location pane (#2479804)
  Better Unicode file detection for full contents compare (#2477657)